--- a/bombeiroSa/ficha.css
+++ b/bombeiroSa/ficha.css
@@ -356,10 +356,12 @@
         text-decoration: none;
     }
 
-    @media screen and (max-width: 768px) body {
-        grid-template-columns: 1fr;
-        overflow-x: hidden;
-        gap: 0.5rem;
+    @media screen and (max-width: 768px) {
+        body {
+            grid-template-columns: 1fr;
+            overflow-x: hidden;
+            gap: 0.5rem;
+        }
     }
 
     /* Importar tiny.css para larguras de tela até 299px */
