--- a/bombeiroSa/ficha.css
+++ b/bombeiroSa/ficha.css
@@ -29,6 +29,7 @@
     .button-group {
         display: flex;
         gap: 20px;
+        justify-content: center;
     }
 
     .button {
@@ -39,6 +40,35 @@
         border-radius: 4px;
         cursor: pointer;
     }
+
+    .form .login-button {
+        display: block;
+        width: 50%;
+        font-weight: bold;
+        background: linear-gradient(28deg, rgba(255, 239, 51, 0.8463760504201681) 0%, rgba(218, 75, 44, 1) 47%, rgba(94, 0, 0, 1) 100%);
+        color: white;
+        padding: 15px;
+        border-radius: 5px;
+        box-shadow: rgba(218, 76, 44, 0.582) 0px 10px 10px -5px;
+        border: none;
+        transition: all 0.2s ease-in-out;
+        justify-content: center;
+    }
+
+    .form .login-button:hover {
+        transform: scale(1.03);
+        box-shadow: rgba(218, 75, 44, 1) 0px 23px 10px -20px;
+    }
+
+    .form .login-button:active {
+        transform: scale(0.95);
+        box-shadow: rgba(218, 76, 44, 0.37) 0px 15px 10px -10px;
+    }
+
+    .form .login-button a {
+        color: white;
+        text-decoration: none;
+    } 
 
     .tonn {
         background-color: #e74c3c;
