--- a/BombeiroSa - atual/ficha.css
+++ b/BombeiroSa - atual/ficha.css
@@ -201,6 +201,79 @@ a {
     text-decoration: none;
 }
 
+.radio-input input {
+    display: none;
+}
+
+.radio-input {
+    --container_width: 300px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    background-color: #fff;
+    color: #000000;
+    width: var(--container_width);
+    overflow: hidden;
+    border: 1px solid rgba(53, 52, 52, 0.226);
+    justify-content: center;
+}
+
+.radio-input label {
+    width: 50%;
+    padding: 3px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    font-weight: 600;
+    font-size: 14px;
+}
+
+.selection {
+    display: none;
+    position: absolute;
+    height: 100%;
+    width: calc(var(--container_width) / 2);
+    z-index: 0;
+    left: 0;
+    top: 0;
+    transition: .15s ease;
+}
+
+.radio-input input:checked + span {
+    color: #fff;
+}
+
+.radio-input input:checked + span + img {
+    display: block;
+}
+
+.radio-input label:has(input:checked)~.selection {
+    background: linear-gradient(28deg, rgba(255, 239, 51, 0.846) 0%, rgba(218, 75, 44, 1) 100%);
+    display: inline-block;
+}
+
+.radio-input label:nth-child(1):has(input:checked)~.selection {
+    transform: translateX(0);
+}
+
+.radio-input label:nth-child(2):has(input:checked)~.selection {
+    transform: translateX(100%);
+}
+
+.radio-input img {
+    display: none;
+    max-width: 100px; /* Ajuste o tamanho conforme necessário */
+}
+
+.eita {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+
 .imgg {
     display: flex;
     align-items: center;
