--- a/codigo reserva/perfil.css
+++ b/codigo reserva/perfil.css
@@ -12,6 +12,10 @@ body {
     margin-bottom: 20px;
 }
 
+.historico {
+    display: none;
+}
+
 .radio-input input {
     display: none;
 }
@@ -47,7 +51,7 @@ body {
     display: none;
     position: absolute;
     height: 100%;
-    width: calc(var(--container_width) / 3);
+    width: calc(var(--container_width) / 2);
     z-index: 0;
     left: 0;
     top: 0;
@@ -64,15 +68,11 @@ body {
 }
 
 .radio-input label:nth-child(1):has(input:checked)~.selection {
-    transform: translateX(calc(var(--container_width) * 0/3));
+    transform: translateX(calc(var(--container_width) * 0/2));
 }
 
 .radio-input label:nth-child(2):has(input:checked)~.selection {
-    transform: translateX(calc(var(--container_width) * 1/3));
-}
-
-.radio-input label:nth-child(3):has(input:checked)~.selection {
-    transform: translateX(calc(var(--container_width) * 2/3));
+    transform: translateX(calc(var(--container_width) * 1/2));
 }
 
 .eita {
@@ -127,7 +127,7 @@ a {
 
     .search-button:hover {
         background-color: #e74c3c;
-    }
+    }}
 
     /* Estilos para telas médias e maiores (exemplo: tablets, desktops) */
     @media (min-width: 769px) {
